# archer

./: CMakeLists.txt  README.md  archerdesign.ui  archermainwindow.cpp  archermainwindow.h  archermainwindow.ui  archerstartingwindow.cpp  archerstartingwindow.h  currencies.txt  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  resources.qrc
